# light-esp-matter-pio

./: .gitignore  CMakeLists.txt  init.sh  platformio.ini  pre.py
components/mdns/: idf_component.yml
main/: CMakeLists.txt
